--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-## ZoneMinder Video Copy Script
+# ZoneMinder Video Copy Script
 
 This script will copy all of the video files created by ZoneMinder from the events folders to a single folder on a target destination.
